lythrum/apps/media/arr/prowlarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`${SUBDOMAIN_PROWLARR}.${DOMAIN_INTERNAL}`)
      middlewares:
        - name: redirect-https
          namespace: traefik
      services:
        - name: noop@internal
          kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr-https
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: traefik.${DOMAIN_INTERNAL}
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`${SUBDOMAIN_PROWLARR}.${DOMAIN_INTERNAL}`)
      priority: 10
      middlewares:
        - name: authentik
          namespace: traefik
      services:
        - name: prowlarr
          port: 9696
    - kind: Rule
      match: "Host(`${SUBDOMAIN_PROWLARR}.${DOMAIN_INTERNAL}`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
        - namespace: authentik
          name: ak-outpost-authentik-embedded-outpost
          port: 9000
  tls:
    secretName: prowlarr-tls
